--- a/ADM.API/ADM.API.csproj
+++ b/ADM.API/ADM.API.csproj
@@ -7,16 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Models\Proveedores.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="Models\NewFile.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ADM.Models\ADM.Models.csproj" />
+    <ProjectReference Include="..\ADM.Service\ADM.Service.csproj" />
   </ItemGroup>
 
 </Project>
