--- a/ADMFacturar/appsettings.json
+++ b/ADMFacturar/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UrlServicios": {
+    "Clientes": "https://localhost:7002/api/Cliente"
+  }
 }
