Listar Proveedores, Transportes en Interfaz

--- a/ADMFacturar/appsettings.json
+++ b/ADMFacturar/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "UrlServicios": {
-    "Clientes": "https://localhost:7002/api/Cliente"
+    "Clientes": "https://localhost:7270/api/Cliente",
+    "Proveedores": "https://localhost:7270/api/Proveedor",
+    "Transportes": "https://localhost:7270/api/Transporte"
   }
 }
