Commit Listar Articulos
Commit Listar Articulos y correccion clientes

--- a/ADMFacturar/appsettings.json
+++ b/ADMFacturar/appsettings.json
@@ -9,6 +9,7 @@
   "UrlServicios": {
     "Clientes": "https://localhost:7270/api/Cliente",
     "Proveedores": "https://localhost:7270/api/Proveedor",
-    "Transportes": "https://localhost:7270/api/Transporte"
+    "Transportes": "https://localhost:7270/api/Transporte",
+    "Articulos": "https://localhost:7270/api/Articulo"
   }
 }
