Commit Listar Vendedores
Commit Listar Vendedores

--- a/ADM.API/appsettings.json
+++ b/ADM.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Conn": "Server=localhost;Database=ADM;Integrated Security=true;TrustServerCertificate=true"
-  }
+    "ConnectionStrings": {
+        "Conn": "Server=DESKTOP-FI9IRP7;Database=ADM;Integrated Security=true;TrustServerCertificate=true"
+    }
 }
