--- a/ADMFacturar/appsettings.json
+++ b/ADMFacturar/appsettings.json
@@ -6,10 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "UrlServicios": {
-    "Clientes": "https://localhost:7270/api/Cliente",
-    "Proveedores": "https://localhost:7270/api/Proveedor",
-    "Transportes": "https://localhost:7270/api/Transporte",
-    "Articulos": "https://localhost:7270/api/Articulo"
-  }
+    "UrlServicios": {
+        "Clientes": "https://localhost:7270/api/Cliente",
+        "Proveedores": "https://localhost:7270/api/Proveedor",
+        "Transportes": "https://localhost:7270/api/Transporte",
+        "Articulos": "https://localhost:7270/api/Articulo",
+        "Vendedores": "https://localhost:7270/api/Vendedor"
+    }
 }
