CRUD en Interfaz para Proveedor

--- a/ADM.API/appsettings.json
+++ b/ADM.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "Conn": "Server=DESKTOP-FI9IRP7;Database=ADM;Integrated Security=true;TrustServerCertificate=true"
-    }
+  "ConnectionStrings": {
+    "Conn": "Server=LOCALHOST\\SQLEXPRESS;Database=ADM;Integrated Security=true;TrustServerCertificate=true"
+  }
 }
