Commit Articulos y Transporte
Error en actualizar articulo

--- a/ADM.API/ADM.API.csproj
+++ b/ADM.API/ADM.API.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\ADM.Service\ADM.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
