Commit Crud Seguridad
Commit Crud Seguridad

--- a/ADM.API/appsettings.json
+++ b/ADM.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conn": "Server=LOCALHOST\\SQLEXPRESS;Database=ADM;Integrated Security=true;TrustServerCertificate=true"
+    "Conn": "Server=localhost;Database=ADM;Integrated Security=true;TrustServerCertificate=true"
   }
 }
