Insert y List Inventario 50%

--- a/ADMFacturar/appsettings.json
+++ b/ADMFacturar/appsettings.json
@@ -12,6 +12,8 @@
     "Transportes": "https://localhost:7270/api/Transporte",
     "Articulos": "https://localhost:7270/api/Articulo",
     "Vendedores": "https://localhost:7270/api/Vendedor",
-    "Seguridad": "https://localhost:7270/api/Seguridad"
+    "Seguridad": "https://localhost:7270/api/Seguridad",
+    "IngresoMercaderia": "https://localhost:7270/api/IngresoMercaderia"
+
   }
 }
