Commit controladores y vistas CXC y CXP

--- a/ADMFacturar/appsettings.json
+++ b/ADMFacturar/appsettings.json
@@ -6,15 +6,20 @@
     }
   },
   "AllowedHosts": "*",
-  "UrlServicios": {
-    "Clientes": "https://localhost:7270/api/Cliente",
-    "Proveedores": "https://localhost:7270/api/Proveedor",
-    "Transportes": "https://localhost:7270/api/Transporte",
-    "Articulos": "https://localhost:7270/api/Articulo",
-    "Vendedores": "https://localhost:7270/api/Vendedor",
-    "Seguridad": "https://localhost:7270/api/Seguridad",
-    "IngresoMercaderia": "https://localhost:7270/api/IngresoMercaderia"
+    "UrlServicios": {
+        "Clientes": "https://localhost:7270/api/Cliente",
+        "Proveedores": "https://localhost:7270/api/Proveedor",
+        "Transportes": "https://localhost:7270/api/Transporte",
+        "Articulos": "https://localhost:7270/api/Articulo",
+        "Vendedores": "https://localhost:7270/api/Vendedor",
+        "Seguridad": "https://localhost:7270/api/Seguridad",
+        "CXP": "https://localhost:7270/api/CXP",
+        "Abono": "https://localhost:7270/api/Abono",
+        "CXC": "https://localhost:7270/api/CXC",
+        "AbonoXC": "https://localhost:7270/api/AbonoXC",
+        "Facturas": "https://localhost:7270/api/Facturas",
+        "IngresoMercaderia": "https://localhost:7270/api/IngresoMercaderia"
 
 
-  }
+    }
 }
