Guardado Registro Correo en BD

--- a/ADMFacturar/appsettings.json
+++ b/ADMFacturar/appsettings.json
@@ -18,7 +18,8 @@
     "CXC": "https://localhost:7270/api/CXC",
     "AbonoXC": "https://localhost:7270/api/AbonoXC",
     "Facturas": "https://localhost:7270/api/Facturas",
-    "IngresoMercaderia": "https://localhost:7270/api/IngresoMercaderia"
+    "IngresoMercaderia": "https://localhost:7270/api/IngresoMercaderia",
+    "Marketing": "https://localhost:7270/api/Marketing"
 
 
   },
