--- a/ADMFacturar/ADM.APICliente.csproj
+++ b/ADMFacturar/ADM.APICliente.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\ImageGenerator\Index.cshtml" />
     <None Include="Views\Shared\ArticulosPars\_ActualizarArticulo.cshtml" />
     <None Include="Views\Shared\ArticulosPars\_CrearArticulo.cshtml" />
   </ItemGroup>
@@ -32,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ADM.Models\ADM.Models.csproj" />
+    <ProjectReference Include="..\ADM.Service\ADM.Service.csproj" />
   </ItemGroup>
 
 </Project>
