--- a/ADMFacturar/ADM.APICliente.csproj
+++ b/ADMFacturar/ADM.APICliente.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="QuestPDF" Version="2024.7.2" />
   </ItemGroup>
 
   <ItemGroup>
