--- a/ADMFacturar/ADM.APICliente.csproj
+++ b/ADMFacturar/ADM.APICliente.csproj
@@ -37,4 +37,8 @@
     <ProjectReference Include="..\ADM.Service\ADM.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\ClientePars\" />
+  </ItemGroup>
+
 </Project>
