--- a/ADM.API/appsettings.json
+++ b/ADM.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conn": "Server=localhost;Database=ADM;Integrated Security=true;TrustServerCertificate=true"
+    "Conn": "Server=tcp:mdafacturarapp.database.windows.net,1433;Initial Catalog=ADM;Persist Security Info=False;User ID=mdafacturaradmin;Password=@zureApp;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
