--- a/ADMFacturar/appsettings.json
+++ b/ADMFacturar/appsettings.json
@@ -7,19 +7,19 @@
   },
   "AllowedHosts": "*",
   "UrlServicios": {
-    "Clientes": "https://localhost:7270/api/Cliente",
-    "Proveedores": "https://localhost:7270/api/Proveedor",
-    "Transportes": "https://localhost:7270/api/Transporte",
-    "Articulos": "https://localhost:7270/api/Articulo",
-    "Vendedores": "https://localhost:7270/api/Vendedor",
-    "Seguridad": "https://localhost:7270/api/Seguridad",
-    "CXP": "https://localhost:7270/api/CXP",
-    "Abono": "https://localhost:7270/api/Abono",
-    "CXC": "https://localhost:7270/api/CXC",
-    "AbonoXC": "https://localhost:7270/api/AbonoXC",
-    "Facturas": "https://localhost:7270/api/Facturas",
-    "IngresoMercaderia": "https://localhost:7270/api/IngresoMercaderia",
-    "Marketing": "https://localhost:7270/api/Marketing"
+    "Clientes": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/Cliente",
+    "Proveedores": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/Proveedor",
+    "Transportes": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/Transporte",
+    "Articulos": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/Articulo",
+    "Vendedores": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/Vendedor",
+    "Seguridad": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/Seguridad",
+    "CXP": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/CXP",
+    "Abono": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/Abono",
+    "CXC": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/CXC",
+    "AbonoXC": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/AbonoXC",
+    "Facturas": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/Facturas",
+    "IngresoMercaderia": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/IngresoMercaderia",
+    "Marketing": "https://admfacturarapi-drg4cmduhxhhh8b7.centralus-01.azurewebsites.net/api/Marketing"
 
 
   },
